     * Allow moodbar files witout the leading '.' (both .<trackfilename>.mood 
       and <trackfilename>.mood now work) 
     * Change example SQL command for setting up an external database to remove
       (sometimes incorrect) host name and possibly fix some random regression in
       some MySQL versions. (BR 225052)

  BUGFIXES:
     * Settings dialog could become too wide with translations. (BR 233752)
     * Fix re-mounting iPhoneOS devices after having been unplugged without being
       unmounted. Thanks to Jeffrey Dodge <hazridi@gmail.com>. (BR 233305)
     * Fix connecting to iPod Touch devices. Patch by Jeffrey Dodge
       <hazridi@gmail.com>. (BR 233257)
     * Fixed the deletion of empty directories after deleting, or organizing.
       (BR 190881)
     * Fixed a hang that would occur when organizing a track and the source
       file was the same as the destination file. (BR 233181)
     * Fixed the double delete confirmation dialog when organizing tracks.
       (BR 233200)
     * Fixed broken rendering of ratings in Current Track applet on startup.
     * Fixed command type names shown in the Bookmark Manager not being translated.
       (BR 226829)
     * Fixed crash on startup for users of MySQL 5.5. Thanks to Bartosz Fabianowski
       for figuring it out. (BR 231166)
     * Readded missing hover info for the new filebrowser.
     * Fixed missing images in the hover info shown for various browser categories.
     * Fixed crash when running some Amarok urls on startup. (such as when passed on
       the command line or cliked in another app) (BR 231626)
     * Fixed crashes when Amarok is started and the Info applet is loaded with 
       certain version of Qt. (BR 227639) (BR 229756) 
     * Fixed organize collection dialog deleting tracks at new location
       instead of old. (BR 217002)
     * Fixed a broken podcast feed that had a minor compliance issue in date
       format. (BR 231062)